Add uv tooling, ruff, tests, and CI

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.venv/
+__pycache__/
+.pytest_cache/
+*.pyc
+.DS_Store
+
+# Worker persistence (runtime volume)
+data/
+/data/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
